# birdSpecies

./: README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  dataset_loader.py  feature_extraction.py  live_predict.py  live_predict_mic.py  predict_file.py  train.py
src/models/: crnn_model.py  label_encoder.pkl
