[project]
name = "bird-species-recognition-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "resampy>=0.4.3",
    "ruff>=0.14.9",
    "scikit-learn>=1.8.0",
    "sounddevice>=0.5.3",
    "tensorflow>=2.20.0",
]
